syntax = "proto3";

package pb;

import "token.proto";

option go_package = "github.com/Dee-Dee-Tiger-Hacks/Backend-Server/pb";

message RenewAccessTokenRequest  {
    string refresh_token = 1;
}

message RenewAccessTokenResponse {
    Token access_token = 1;
}